[package]
name = "ws2812"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
derive-new = { version = "0.7" }
thiserror = { version = "2.0", default-features = false }
cfg-if = { version = "1.0" }

# optional dependencies
esp-hal = { version = "1.0.0-beta.1", optional = true, features = [
  "defmt",
  "unstable",
] }

bevy_color = { version = "0.16", optional = true, default-features = false, features = [
  "alloc",
  "libm",
] }

defmt = { version = "1.0", optional = true }

[features]
testing = ["bevy"]
default = ["bevy", "esp", "defmt"]

esp = ["dep:esp-hal"]
esp32s3 = ["esp-hal?/esp32s3"]
esp32 = ["esp-hal?/esp32"]
bevy = ["dep:bevy_color"]
defmt = ["dep:defmt"]
std = []

# use the ws2812 spec timings, otherwise, adjusted timings will be used
timings_spec = []
