[package]
name = "ws2812"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
derive-new = { version = "0.7" }
thiserror = { version = "2.0", default-features = false }
cfg-if = { version = "1.0" }
heapless = { version = "0.8" }

# optional dependencies
crossbeam = { version = "0.8", optional = true, default-features = false }

esp-hal = { version = "1.0.0-rc.0", optional = true, features = [
  "defmt",
  "unstable",
] }

defmt = { version = "1.0", optional = true }

[features]
testing = []
default = ["esp32s3"]

esp = ["defmt", "dep:esp-hal", "dep:crossbeam"]
esp32s3 = ["esp", "esp-hal?/esp32s3"]
esp32 = ["esp", "esp-hal?/esp32"]

defmt = ["dep:defmt"]
std = []

# use the ws2812 spec timings, otherwise, adjusted timings will be used
timings_spec = []
